Remove --enable-preview.